# easystream_main_plugin

./: .gitignore  APIdocumentation.md  CMakeLists.txt  README.md  docker-compose.yaml  docker-compose.yml  ldd.txt  tets.c  tmp.txt
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
.git-old/logs/: HEAD
.github/workflows/: build.yml  c-cpp.yml  docs.yml
NetworkCommunication/: CMakeLists.txt
NetworkCommunication/Error/: Error.cpp  Error.hpp
NetworkCommunication/Server/include/: Server.hpp
NetworkCommunication/Server/src/: Server.cpp
Tests/include/: Client.hpp  Tests.hpp
Tests/src/: Client.cpp  Tests.cpp
ci/: ci_includes.generated.cmd  ci_includes.generated.sh  tags.sh
ci/grpc/: linux-install-script.sh  osx-install-script.sh  win-install-script.cmd
ci/http/: linux-install-script.sh  osx-install-script.sh  win-install-script.cmd
ci/linux/: Dockerfile  build-ubuntu.sh  install-dependencies-ubuntu.sh
ci/macos/: build-macos.sh  install-dependencies-macos.sh
ci/windows/: install-boost.cmd  install-qt-win.cmd  package-windows.cmd  prepare-obs-windows.cmd  prepare-windows.cmd  set-version-github.cmd
docker/linux/: Dockerfile
installer/: installer-Windows.generated.iss  installer-macOS.generated.pkgproj
plugin/ci/: ci_includes.generated.sh
plugin/src/: Macros.hpp  plugin-main.cpp
src/: Common.hpp  common.hpp  plugin-macros.generated.h  plugin-main.cpp  plugin-main.hpp
src/obs/: Memory.cpp  Memory.hpp  SourceTracker.cpp  SourceTracker.hpp  memory.cpp  memory.hpp  obs.hpp  sourceTracker.cpp  (+1 more)
tests/: test.c  test2  test2.cpp
(+49 files in other folders)
